# dot_rust

./: README.md
rust_api_service/: .env  .env.example  Cargo.toml  README.md
rust_api_service/src/: config.rs  db.rs  errors.rs  main.rs
rust_api_service/src/models/: item.rs
rust_api_service/src/routes/: items.rs  mod.rs
